# da-gtm

./: CMakeLists.comm.txt  CMakeLists.txt  INSTALL.txt  README.md  config.sh
comm/: CMakeLists.txt  comm.c  comm.h  getopt.c  getopt.h  h5comm.c  h5comm.h  hilbert.c  hilbert.h  intp.c  log.c  log.h  mpicomm.c  mpicomm.h  vec.c  vec.h
dagtm/: CMakeLists.txt  dagtm.cxx  message.pb.cc  message.pb.h  message.proto  pvizrpc.proto
data/: DataTrn.labels.txt  Oil.h5  Oil.out.h5  import.sh  run.sh
intp/: CMakeLists.txt  intp.c
